// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/alert/demo/action.tsx extend context correctly 1`] = `
<div
  class="ant-space ant-space-vertical"
  style="width: 100%;"
>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-success"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="check-circle"
        class="anticon anticon-check-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="check-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Success Tips
        </div>
      </div>
      <div
        class="ant-alert-action"
      >
        <button
          class="ant-btn ant-btn-text ant-btn-sm"
          type="button"
        >
          <span>
            UNDO
          </span>
        </button>
      </div>
      <button
        class="ant-alert-close-icon"
        tabindex="0"
        type="button"
      >
        <span
          aria-label="close"
          class="anticon anticon-close"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-error ant-alert-with-description"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Error Text
        </div>
        <div
          class="ant-alert-description"
        >
          Error Description Error Description Error Description Error Description
        </div>
      </div>
      <div
        class="ant-alert-action"
      >
        <button
          class="ant-btn ant-btn-default ant-btn-sm ant-btn-dangerous"
          type="button"
        >
          <span>
            Detail
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-warning ant-alert-no-icon"
      data-show="true"
      role="alert"
    >
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Warning Text
        </div>
      </div>
      <div
        class="ant-alert-action"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-ghost ant-btn-sm"
              type="button"
            >
              <span>
                Done
              </span>
            </button>
          </div>
        </div>
      </div>
      <button
        class="ant-alert-close-icon"
        tabindex="0"
        type="button"
      >
        <span
          aria-label="close"
          class="anticon anticon-close"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-alert ant-alert-info ant-alert-with-description ant-alert-no-icon"
      data-show="true"
      role="alert"
    >
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Info Text
        </div>
        <div
          class="ant-alert-description"
        >
          Info Description Info Description Info Description Info Description
        </div>
      </div>
      <div
        class="ant-alert-action"
      >
        <div
          class="ant-space ant-space-vertical"
        >
          <div
            class="ant-space-item"
            style="margin-bottom: 8px;"
          >
            <button
              class="ant-btn ant-btn-primary ant-btn-sm"
              type="button"
            >
              <span>
                Accept
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-ghost ant-btn-sm ant-btn-dangerous"
              type="button"
            >
              <span>
                Decline
              </span>
            </button>
          </div>
        </div>
      </div>
      <button
        class="ant-alert-close-icon"
        tabindex="0"
        type="button"
      >
        <span
          aria-label="close"
          class="anticon anticon-close"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders components/alert/demo/banner.tsx extend context correctly 1`] = `
<div
  class="ant-space ant-space-vertical"
  style="width: 100%;"
>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-warning ant-alert-banner"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="exclamation-circle"
        class="anticon anticon-exclamation-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="exclamation-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Warning text
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-warning ant-alert-banner"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="exclamation-circle"
        class="anticon anticon-exclamation-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="exclamation-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Very long warning text warning text text text text text text text
        </div>
      </div>
      <button
        class="ant-alert-close-icon"
        tabindex="0"
        type="button"
      >
        <span
          aria-label="close"
          class="anticon anticon-close"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-warning ant-alert-no-icon ant-alert-banner"
      data-show="true"
      role="alert"
    >
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Warning text without icon
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-alert ant-alert-error ant-alert-banner"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Error text
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/alert/demo/basic.tsx extend context correctly 1`] = `
<div
  class="ant-alert ant-alert-success ant-alert-no-icon"
  data-show="true"
  role="alert"
>
  <div
    class="ant-alert-content"
  >
    <div
      class="ant-alert-message"
    >
      Success Text
    </div>
  </div>
</div>
`;

exports[`renders components/alert/demo/closable.tsx extend context correctly 1`] = `
<div
  class="ant-space ant-space-vertical"
  style="width: 100%;"
>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-warning ant-alert-no-icon"
      data-show="true"
      role="alert"
    >
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Warning Text Warning Text Warning TextW arning Text Warning Text Warning TextWarning Text
        </div>
      </div>
      <button
        class="ant-alert-close-icon"
        tabindex="0"
        type="button"
      >
        <span
          aria-label="close"
          class="anticon anticon-close"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-alert ant-alert-error ant-alert-with-description ant-alert-no-icon"
      data-show="true"
      role="alert"
    >
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Error Text
        </div>
        <div
          class="ant-alert-description"
        >
          Error Description Error Description Error Description Error Description Error Description Error Description
        </div>
      </div>
      <button
        class="ant-alert-close-icon"
        tabindex="0"
        type="button"
      >
        <span
          aria-label="close"
          class="anticon anticon-close"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders components/alert/demo/close-text.tsx extend context correctly 1`] = `
<div
  class="ant-alert ant-alert-info ant-alert-no-icon"
  data-show="true"
  role="alert"
>
  <div
    class="ant-alert-content"
  >
    <div
      class="ant-alert-message"
    >
      Info Text
    </div>
  </div>
  <button
    class="ant-alert-close-icon"
    tabindex="0"
    type="button"
  >
    <span
      class="ant-alert-close-text"
    >
      Close Now
    </span>
  </button>
</div>
`;

exports[`renders components/alert/demo/custom-icon.tsx extend context correctly 1`] = `
<div
  class="ant-space ant-space-vertical"
  style="width: 100%;"
>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-success ant-alert-no-icon"
      data-show="true"
      role="alert"
    >
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          showIcon = false
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-success"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="smile"
        class="anticon anticon-smile ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="smile"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Success Tips
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-info"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="smile"
        class="anticon anticon-smile ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="smile"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Informational Notes
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-warning"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="smile"
        class="anticon anticon-smile ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="smile"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Warning
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-error"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="smile"
        class="anticon anticon-smile ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="smile"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Error
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-success ant-alert-with-description"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="smile"
        class="anticon anticon-smile ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="smile"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Success Tips
        </div>
        <div
          class="ant-alert-description"
        >
          Detailed description and advices about successful copywriting.
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-info ant-alert-with-description"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="smile"
        class="anticon anticon-smile ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="smile"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Informational Notes
        </div>
        <div
          class="ant-alert-description"
        >
          Additional description and informations about copywriting.
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-warning ant-alert-with-description"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="smile"
        class="anticon anticon-smile ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="smile"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Warning
        </div>
        <div
          class="ant-alert-description"
        >
          This is a warning notice about copywriting.
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-alert ant-alert-error ant-alert-with-description"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="smile"
        class="anticon anticon-smile ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="smile"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Error
        </div>
        <div
          class="ant-alert-description"
        >
          This is an error message about copywriting.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/alert/demo/description.tsx extend context correctly 1`] = `
<div
  class="ant-space ant-space-vertical"
  style="width: 100%;"
>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-success ant-alert-with-description ant-alert-no-icon"
      data-show="true"
      role="alert"
    >
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Success Text
        </div>
        <div
          class="ant-alert-description"
        >
          Success Description Success Description Success Description
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-info ant-alert-with-description ant-alert-no-icon"
      data-show="true"
      role="alert"
    >
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Info Text
        </div>
        <div
          class="ant-alert-description"
        >
          Info Description Info Description Info Description Info Description
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-warning ant-alert-with-description ant-alert-no-icon"
      data-show="true"
      role="alert"
    >
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Warning Text
        </div>
        <div
          class="ant-alert-description"
        >
          Warning Description Warning Description Warning Description Warning Description
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-alert ant-alert-error ant-alert-with-description ant-alert-no-icon"
      data-show="true"
      role="alert"
    >
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Error Text
        </div>
        <div
          class="ant-alert-description"
        >
          Error Description Error Description Error Description Error Description
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/alert/demo/error-boundary.tsx extend context correctly 1`] = `
<button
  class="ant-btn ant-btn-default ant-btn-dangerous"
  type="button"
>
  <span>
    Click me to throw a error
  </span>
</button>
`;

exports[`renders components/alert/demo/icon.tsx extend context correctly 1`] = `
<div
  class="ant-space ant-space-vertical"
  style="width: 100%;"
>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-success"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="check-circle"
        class="anticon anticon-check-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="check-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Success Tips
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-info"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="info-circle"
        class="anticon anticon-info-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="info-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Informational Notes
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-warning"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="exclamation-circle"
        class="anticon anticon-exclamation-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="exclamation-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Warning
        </div>
      </div>
      <button
        class="ant-alert-close-icon"
        tabindex="0"
        type="button"
      >
        <span
          aria-label="close"
          class="anticon anticon-close"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-error"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Error
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-success ant-alert-with-description"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="check-circle"
        class="anticon anticon-check-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="check-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Success Tips
        </div>
        <div
          class="ant-alert-description"
        >
          Detailed description and advice about successful copywriting.
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-info ant-alert-with-description"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="info-circle"
        class="anticon anticon-info-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="info-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Informational Notes
        </div>
        <div
          class="ant-alert-description"
        >
          Additional description and information about copywriting.
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-warning ant-alert-with-description"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="exclamation-circle"
        class="anticon anticon-exclamation-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="exclamation-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Warning
        </div>
        <div
          class="ant-alert-description"
        >
          This is a warning notice about copywriting.
        </div>
      </div>
      <button
        class="ant-alert-close-icon"
        tabindex="0"
        type="button"
      >
        <span
          aria-label="close"
          class="anticon anticon-close"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-alert ant-alert-error ant-alert-with-description"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Error
        </div>
        <div
          class="ant-alert-description"
        >
          This is an error message about copywriting.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/alert/demo/smooth-closed.tsx extend context correctly 1`] = `
<div
  class="ant-space ant-space-vertical"
  style="width: 100%;"
>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-success ant-alert-no-icon"
      data-show="true"
      role="alert"
    >
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Alert Message Text
        </div>
      </div>
      <button
        class="ant-alert-close-icon"
        tabindex="0"
        type="button"
      >
        <span
          aria-label="close"
          class="anticon anticon-close"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <p>
      click the close button to see the effect
    </p>
  </div>
  <div
    class="ant-space-item"
  >
    <button
      aria-checked="true"
      class="ant-switch ant-switch-checked ant-switch-disabled"
      disabled=""
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        />
        <span
          class="ant-switch-inner-unchecked"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`renders components/alert/demo/style.tsx extend context correctly 1`] = `
<div
  class="ant-space ant-space-vertical"
  style="width: 100%;"
>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-success ant-alert-no-icon"
      data-show="true"
      role="alert"
    >
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Success Text
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-info ant-alert-no-icon"
      data-show="true"
      role="alert"
    >
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Info Text
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <div
      class="ant-alert ant-alert-warning ant-alert-no-icon"
      data-show="true"
      role="alert"
    >
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Warning Text
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-alert ant-alert-error ant-alert-no-icon"
      data-show="true"
      role="alert"
    >
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Error Text
        </div>
      </div>
    </div>
  </div>
</div>
`;
